<resources>
    <string name="app_name">Agenda</string>
    <string name="titulo_agenda">Novo Cadastro</string>
    <string name="label_nome">Nome</string>
    <string name="label_email">E-mail</string>
    <string name="label_botao">Cadastrar</string>
    <string name="cadastro_sucesso">Cadastro realizado com sucesso</string>
    <string name="cadastro_erro">Erro no cadastro</string>
    <string name="listar_contatos">Listar contatos</string>
    <string name="titulo_editar_cadastro">Editar Cadastro</string>
    <string name="label_atualizar_contato">Atualizar</string>
    <string name="label_deletar_contato">Deletar</string>
    <string name="atualizar_sucesso">Contato atualizado com sucesso</string>
    <string name="deletar_sucesso">Contado deletado com sucesso</string>
</resources>
